tests/feature_tests/error_bool.c
int main() {
  struct A {} a;

  // error: '&&' operator requires scalar operands
  a && a;

  // error: '||' operator requires scalar operands
  a || a;

  // error: '!' operator requires scalar operand
  !a;
}
